--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     volumes:
       - .:/main/code
       - data:/main/temp
+      - "/var/run/docker.sock:/var/run/docker.sock"
     depends_on:
       - postgres
       - ansible
